--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
                 <h3 class="fullname">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
               </div>
+
+              <ul class="list">
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+              </ul>
             </li>
 
             <li class="team-list-item">
@@ -170,6 +177,13 @@
                 <h3 class="fullname">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
               </div>
+
+              <ul class="list">
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+              </ul>
             </li>
 
             <li class="team-list-item">
@@ -182,6 +196,13 @@
                 <h3 class="fullname">Camila Garcia</h3>
                 <p class="position">Marketing</p>
               </div>
+
+              <ul class="list">
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+              </ul>
             </li>
 
             <li class="team-list-item">
@@ -194,7 +215,34 @@
                 <h3 class="fullname">Daniel Wilson</h3>
                 <p class="position">UI DEsigner</p>
               </div>
+
+              <ul class="list">
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+                <li class="icons"></li>
+              </ul>
             </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Customers -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-list-item"></li>
+
+            <li class="customers-list-item"></li>
+
+            <li class="customers-list-item"></li>
+
+            <li class="customers-list-item"></li>
+
+            <li class="customers-list-item"></li>
+
+            <li class="customers-list-item"></li>
           </ul>
         </div>
       </section>
