--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 
           <ul class="feature-list list">
             <li class="feature-list-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#antenna"></use>
+              </svg>
               <h3 class="title">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -83,6 +86,9 @@
             </li>
 
             <li class="feature-list-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
               <h3 class="title">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -91,6 +97,9 @@
             </li>
 
             <li class="feature-list-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#diagram"></use>
+              </svg>
               <h3 class="title">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -99,6 +108,9 @@
             </li>
 
             <li class="feature-list-item">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
               <h3 class="title">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -159,12 +171,41 @@
                 <p class="position">Product Designer</p>
               </div>
 
-              <ul class="list">
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-              </ul>
+              <div class="social-media">
+                <ul class="social-media-list list">
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -178,12 +219,41 @@
                 <p class="position">Frontend Developer</p>
               </div>
 
-              <ul class="list">
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-              </ul>
+              <div class="social-media">
+                <ul class="social-media-list list">
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -197,12 +267,41 @@
                 <p class="position">Marketing</p>
               </div>
 
-              <ul class="list">
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-              </ul>
+              <div class="social-media">
+                <ul class="social-media-list list">
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-list-item">
@@ -216,12 +315,41 @@
                 <p class="position">UI DEsigner</p>
               </div>
 
-              <ul class="list">
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-                <li class="icons"></li>
-              </ul>
+              <div class="social-media">
+                <ul class="social-media-list list">
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height=" 40">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="">
+                      <svg class="icon" width="40" height="40">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -231,18 +359,43 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
+
           <ul class="customers-list list">
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company1"></use>
+              </svg>
+            </li>
 
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company2"></use>
+              </svg>
+            </li>
 
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company3"></use>
+              </svg>
+            </li>
 
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company4"></use>
+              </svg>
+            </li>
 
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company5"></use>
+              </svg>
+            </li>
 
-            <li class="customers-list-item"></li>
+            <li class="customers-list-item">
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#company6"></use>
+              </svg>
+            </li>
           </ul>
         </div>
       </section>
