svg vse eshe ne robit

--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
                 alt="Different widows illustrating the instagram stories concept"
                 width="360"
               />
-              <div class="bottom-border">
+              <div class="card-content">
                 <h2>Instagram Stories Concept</h2>
                 <p>Design</p>
               </div>
