--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
 
           <ul class="feature-list list">
             <li class="feature-list-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#antenna"></use>
-              </svg>
+              <div class="icon-block">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -86,9 +89,12 @@
             </li>
 
             <li class="feature-list-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#clock"></use>
-              </svg>
+              <div class="icon-block">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -97,9 +103,12 @@
             </li>
 
             <li class="feature-list-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#diagram"></use>
-              </svg>
+              <div class="icon-block">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -108,9 +117,12 @@
             </li>
 
             <li class="feature-list-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#astronaut"></use>
-              </svg>
+              <div class="icon-block">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
@@ -156,7 +168,7 @@
 
       <!-- Team -->
       <section class="section">
-        <div class="container team">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
 
           <ul class="team-list list">
@@ -171,9 +183,9 @@
                 <p class="position">Product Designer</p>
               </div>
 
-              <div class="social-media">
-                <ul class="social-media-list list">
-                  <li>
+              <div class="social">
+                <ul class="social-list list">
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
@@ -181,7 +193,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
@@ -189,7 +201,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
@@ -197,7 +209,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -219,9 +231,9 @@
                 <p class="position">Frontend Developer</p>
               </div>
 
-              <div class="social-media">
-                <ul class="social-media-list list">
-                  <li>
+              <div class="social">
+                <ul class="social-list list">
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
@@ -229,7 +241,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
@@ -237,7 +249,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
@@ -245,7 +257,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -267,9 +279,9 @@
                 <p class="position">Marketing</p>
               </div>
 
-              <div class="social-media">
-                <ul class="social-media-list list">
-                  <li>
+              <div class="social">
+                <ul class="social-list list">
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
@@ -277,7 +289,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
@@ -285,7 +297,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
@@ -293,7 +305,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -315,9 +327,9 @@
                 <p class="position">UI DEsigner</p>
               </div>
 
-              <div class="social-media">
-                <ul class="social-media-list list">
-                  <li>
+              <div class="social">
+                <ul class="social-list list">
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
@@ -325,7 +337,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
@@ -333,7 +345,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
@@ -341,7 +353,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="social-list-item team">
                     <a href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
@@ -363,37 +375,37 @@
           <ul class="customers-list list">
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company1"></use>
+                <use href="./images/icons.svg#logo1"></use>
               </svg>
             </li>
 
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company2"></use>
+                <use href="./images/icons.svg#logo2"></use>
               </svg>
             </li>
 
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company3"></use>
+                <use href="./images/icons.svg#logo3"></use>
               </svg>
             </li>
 
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company4"></use>
+                <use href="./images/icons.svg#logo4"></use>
               </svg>
             </li>
 
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company5"></use>
+                <use href="./images/icons.svg#logo5"></use>
               </svg>
             </li>
 
             <li class="customers-list-item">
               <svg width="104" height="56">
-                <use href="./images/icons.svg#company6"></use>
+                <use href="./images/icons.svg#logo6"></use>
               </svg>
             </li>
           </ul>
@@ -403,13 +415,60 @@
 
     <footer>
       <div class="container">
-        <a href="./index.html" class="logo"
-          >web<span class="logo-footer">studio</span></a
-        >
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a href="./index.html" class="logo"
+              >web<span class="logo-footer">studio</span></a
+            >
+            <p>
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+
+          <li class="footer-list-item">
+            <div class="social-container">
+              <h2 class="title">Social media</h2>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <!-- <h2 class="title">Subscribe</h2> -->
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
