--- a/portfolio.html
+++ b/portfolio.html
@@ -206,13 +206,60 @@
 
     <footer>
       <div class="container">
-        <a href="./index.html" class="logo"
-          >web<span class="logo-footer">studio</span></a
-        >
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a href="./index.html" class="logo"
+              >web<span class="logo-footer">studio</span></a
+            >
+            <p>
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+
+          <li class="footer-list-item">
+            <div class="social-container">
+              <h2 class="title">Social media</h2>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-list-item">
+                  <a href="">
+                    <svg class="icon" width="24" height="24">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <!-- <h2 class="title">Subscribe</h2> -->
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
