svg robit teper ne strno

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,111 +93,129 @@
 
           <ul class="project-list list">
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/banking_app.jpg"
-                alt="Banking app interface concept"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Banking App Interface Concept</h2>
-                <p>App</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/banking_app.jpg"
+                  alt="Banking app interface concept"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Banking App Interface Concept</h2>
+                  <p>App</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/cashless_payment.jpg"
-                alt="Cashless payment"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Cashless Payment</h2>
-                <p>Marketing</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/cashless_payment.jpg"
+                  alt="Cashless payment"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Cashless Payment</h2>
+                  <p>Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/meditation_app.jpg"
-                alt="Meditation app"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Meditaion App</h2>
-                <p>App</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/meditation_app.jpg"
+                  alt="Meditation app"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Meditaion App</h2>
+                  <p>App</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/taxi_service.jpg"
-                alt="Taxi service"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Taxi Service</h2>
-                <p>Taxi Service</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/taxi_service.jpg"
+                  alt="Taxi service"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Taxi Service</h2>
+                  <p>Taxi Service</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/screen_illustrations.jpg"
-                alt="Screen illustrations"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Screen Illustrations</h2>
-                <p>Design</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/screen_illustrations.jpg"
+                  alt="Screen illustrations"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Screen Illustrations</h2>
+                  <p>Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/online_courses.jpg"
-                alt="Woman learning on online courses"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Online Courses</h2>
-                <p>Marketing</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/online_courses.jpg"
+                  alt="Woman learning on online courses"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Online Courses</h2>
+                  <p>Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/instagram_stories_concept.jpg"
-                alt="Different widows illustrating the instagram stories concept"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Instagram Stories Concept</h2>
-                <p>Design</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/instagram_stories_concept.jpg"
+                  alt="Different widows illustrating the instagram stories concept"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Instagram Stories Concept</h2>
+                  <p>Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/organic_food.jpg"
-                alt="Woman walking with a bag of vegetables"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Organic Food</h2>
-                <p>Web Site</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/organic_food.jpg"
+                  alt="Woman walking with a bag of vegetables"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Organic Food</h2>
+                  <p>Web Site</p>
+                </div>
+              </a>
             </li>
 
             <li class="project-list-item">
-              <img
-                src="./images/portfolio/fresh_cofee.jpg"
-                alt="Barista making an art on top of the cofee"
-                width="360"
-              />
-              <div class="card-content">
-                <h2>Fresh Cofee</h2>
-                <p>Web Site</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/fresh_cofee.jpg"
+                  alt="Barista making an art on top of the cofee"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2>Fresh Cofee</h2>
+                  <p>Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -222,7 +240,7 @@
               <h2 class="title">Social media</h2>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a href="">
+                  <a href="" class="icon-block">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
@@ -230,7 +248,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="">
+                  <a href="" class="icon-block">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
@@ -238,7 +256,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="">
+                  <a href="" class="icon-block">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
@@ -246,7 +264,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="">
+                  <a href="" class="icon-block">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
