--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div class="social">
                 <ul class="social-list list">
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
@@ -194,7 +194,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
@@ -202,7 +202,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
@@ -210,7 +210,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -234,7 +234,7 @@
               <div class="social">
                 <ul class="social-list list">
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
@@ -242,7 +242,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
@@ -250,7 +250,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
@@ -258,7 +258,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -282,7 +282,7 @@
               <div class="social">
                 <ul class="social-list list">
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
@@ -290,7 +290,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
@@ -298,7 +298,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
@@ -306,7 +306,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -330,7 +330,7 @@
               <div class="social">
                 <ul class="social-list list">
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
@@ -338,7 +338,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
@@ -346,7 +346,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
@@ -354,7 +354,7 @@
                   </li>
 
                   <li class="social-list-item team">
-                    <a href="" class="icon-block">
+                    <a href="" class="icon-block team">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -374,7 +374,7 @@
 
           <ul class="customers-list list">
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo1"></use>
                 </svg>
@@ -382,7 +382,7 @@
             </li>
 
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo2"></use>
                 </svg>
@@ -390,7 +390,7 @@
             </li>
 
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo3"></use>
                 </svg>
@@ -398,7 +398,7 @@
             </li>
 
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo4"></use>
                 </svg>
@@ -406,7 +406,7 @@
             </li>
 
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo5"></use>
                 </svg>
@@ -414,7 +414,7 @@
             </li>
 
             <li class="customers-list-item">
-              <a href="" class="icon-block">
+              <a href="" class="icon-block customers">
                 <svg class="icon" width="104" height="56">
                   <use href="./images/icons.svg#logo6"></use>
                 </svg>
@@ -443,7 +443,7 @@
               <h2 class="title">Social media</h2>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
@@ -451,7 +451,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
@@ -459,7 +459,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
@@ -467,7 +467,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
