--- a/portfolio.html
+++ b/portfolio.html
@@ -240,7 +240,7 @@
               <h2 class="title">Social media</h2>
               <ul class="social-list list">
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
@@ -248,7 +248,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
@@ -256,7 +256,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
@@ -264,7 +264,7 @@
                 </li>
 
                 <li class="social-list-item">
-                  <a href="" class="icon-block">
+                  <a href="" class="icon-block footer">
                     <svg class="icon" width="24" height="24">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
